Add missing keys for services & translation

--- a/custom_components/zha_toolkit/translations/en.json
+++ b/custom_components/zha_toolkit/translations/en.json
@@ -173,6 +173,7 @@
             }
         },
         "add_to_group": {
+            "name" : "Add Device to Group",
             "description": "Add device to group",
             "fields": {
                 "ieee": {
@@ -350,6 +351,7 @@
                     "description": "Attribute value to write"
                 },
                 "use_cache": {
+                    "name": "Use Cache",
                     "description": "Use zigpy attribute cache to get the value of an attribute. (Does not send a zigbee packet to read the attribute)\n"
                 },
                 "tries": {
@@ -411,9 +413,11 @@
             }
         },
         "backup": {
+            "name": "Backup Coordinator Data",
             "description": "Backup coordinator data (znp, bellows/ezsp)",
             "fields": {
                 "command_data": {
+                    "name": "Backup File Suffix",
                     "description": "Suffix for backup file"
                 },
                 "event_success": {
@@ -489,6 +493,7 @@
             }
         },
         "bind_group": {
+            "name": "Bind Clusters From Device to Device",
             "description": "Bind clusters from ieee device to command_data device",
             "fields": {
                 "ieee": {
@@ -726,6 +731,7 @@
             "description": "Backup coordinator data (bellows/ezsp)",
             "fields": {
                 "command_data": {
+                    "name": "Backup File Suffix",
                     "description": "Suffix for backup file"
                 },
                 "event_success": {
@@ -1299,6 +1305,7 @@
             }
         },
         "tuya_magic": {
+            "name": "Cast Tuya Magic Spell",
             "description": "Do Tuya magic spell (= make most Tuya devices work normally)",
             "fields": {
                 "ieee": {
